--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,8 +10,9 @@
         android:layout_width="279dp"
         android:layout_height="268dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp" />
-<!--    android:src="@drawable/cafe_user_icon"-->
+        android:layout_marginTop="50dp"
+        android:src="@drawable/ic_launcher_background"/>
+
 
     <EditText
         android:id="@+id/editTextUsername"
