--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -10,8 +10,9 @@
         android:layout_height="167dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
+        android:src="@drawable/ic_launcher_background"
          />
-<!--    android:src="@drawable/cafe_user_icon"-->
+
 
     <EditText
         android:id="@+id/editTextFullName"
