--- a/app/src/main/res/layout/homepage.xml
+++ b/app/src/main/res/layout/homepage.xml
@@ -64,10 +64,9 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/popular_Items"
-                android:layout_width="wrap_content"
-                android:layout_height="@dimen/_90sdp"
+                android:layout_width="196dp"
+                android:layout_height="235dp"
                 android:layout_marginStart="@dimen/_25sdp"
-                android:layout_marginEnd="@dimen/_10sdp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/popularitemstextview" />
 
